apps/plex/plex.yml
apiVersion: v1
kind: Service
metadata:
  name: plex-connect
  labels:
    app: plex
    app.kubernetes.io/name: plex
    app.kubernetes.io/instance: plex
spec:
  ports:
    - name: http
      port: 32400
      targetPort: 32400
      protocol: TCP
    - name: http2
      port: 8324
      targetPort: 8324
      protocol: TCP
    - name: http3
      port: 3005
      targetPort: 3005
      protocol: TCP
    - name: http4
      port: 32469
      targetPort: 32469
      protocol: TCP
    - name: http5
      port: 1900
      targetPort: 1900
      protocol: UDP
    - name: http6
      port: 5353
      targetPort: 5353
      protocol: UDP
    - name: http7
      port: 32410
      targetPort: 32410
      protocol: UDP
    - name: http8
      port: 32412
      targetPort: 32412
      protocol: UDP
    - name: http9
      port: 32413
      targetPort: 32413
      protocol: UDP
    - name: http10
      port: 32414
      targetPort: 32414
      protocol: UDP
  selector:
    app: plex
  type: NodePort



---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-deployment
  labels:
    app: plex
  namespace: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      nodeName: pikachu
      containers:
        - name: plex
          image: lscr.io/linuxserver/plex:latest
          volumeMounts:
            - name: config
              mountPath: /config
            - name: transcode
              mountPath: /transcode
            - name: dev-dri
              mountPath: /dev/dri
            - name: movies
              mountPath: /movies
            - name: tv
              mountPath: /tv
            - name: backup
              mountPath: /backups
          ports:
            - name: http
              containerPort: 32400
            - name: http2
              containerPort: 8324
            - name: http3
              containerPort: 3005
            - name: http4
              containerPort: 32469
            - name: http5
              containerPort: 1900
            - name: http6
              containerPort: 5353
            - name: http7
              containerPort: 32410
            - name: http8
              containerPort: 32412
            - name: http9
              containerPort: 32413
            - name: http10
              containerPort: 32414
      volumes:
        - name: config
          hostPath:
            path: /plex/config
        - name: backup
          nfs:
            server: 10.0.50.3
            path: /mnt/user/plex_backups
        - name: transcode
          hostPath:
            path: /plex/transcode
        - name: dev-dri
          hostPath:
            path: /dev/dri
        - name: movies
          nfs:
            server: 10.0.50.3
            path: /mnt/user/movies
        - name: tv
          nfs:
            server: 10.0.50.3
            path: /mnt/user/tv
