apps/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  labels:
    app: plex
    app.kubernetes.io/name: plex
    app.kubernetes.io/instance: plex
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: "homelab-tunnel.eaglepass.io"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    hajimari.io/appName: Plex
    hajimari.io/icon: movie-roll
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - plex.eaglepass.io
      secretName: plex-tls-certificate
  rules:
    - host: plex.eaglepass.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex-service
                port:
                  name: http
